authelia-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia  # Ensure the namespace is specified here
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/name: authelia
    spec:
      containers:
        - name: authelia
          image: docker.io/authelia/authelia:latest
          command:
            - authelia
          args:
            - '--config=/configuration.yaml'
          ports:
          - containerPort: 9091
          volumeMounts:
            - name: authelia-config
              mountPath: /configuration.yaml
              subPath: configuration.yaml
            - name: authelia-users
              mountPath: /config/users.yml
              subPath: users.yml
      volumes:
        - name: authelia-config
          configMap:
            name: authelia-config
        - name: authelia-users
          configMap:
            name: authelia-users-config
