authsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia-service
  namespace: authelia
spec:
  selector:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
  ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
